--- a/css/index.css
+++ b/css/index.css
@@ -51,18 +51,34 @@ body {
     color: white;
 }
 
-.menu>img {
+.carS {
     position: absolute;
+    right: 45px;
+}
+
+.carS>img {
     right: 45px;
     cursor: pointer;
 }
 
-.menu>sup {
-    position: absolute;
-    top: 140px;
-    right: 30px;
+.carS>sup {
     font-size: 1rem;
     font-weight: bold;
+}
+
+#carousel1 {
+    height: auto;
+}
+
+#contenedor {
+    overflow-y: hidden;
+}
+
+.imgCar {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+    position: absolute;
 }
 
 main {
@@ -77,7 +93,8 @@ aside {
     float: left;
     width: 300px;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
     background-color: aqua;
 }
 
@@ -96,6 +113,11 @@ aside>ul>li:last-child {
 
 aside>ul>li>span:last-child {
     margin-left: 1rem;
+}
+
+#carousel2 {
+    margin-bottom: 2rem;
+    margin-top: 2rem;
 }
 
 /* section */
