--- a/css/index.css
+++ b/css/index.css
@@ -10,13 +10,14 @@ body {
     height: 100%;
     font-family: 'Roboto', sans-serif;
     font-family: 'Roboto Condensed', sans-serif;
+    overflow-x: clip;
 }
 
 /* header */
 
 .header {
     height: 100px;
-    background-color: purple;
+    background-color: #1C0772;
     display: flex;
     align-items: center;
 }
@@ -33,7 +34,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: blueviolet;
+    background-color: #6549D7;
 }
 
 .menu>ul {
@@ -81,34 +82,57 @@ body {
     position: absolute;
 }
 
+/* main */
+
 main {
     display: flex;
     width: 100%;
     height: 100%;
+    background-color: #1C0772;
 }
 
 /* aside */
 
 aside {
     float: left;
-    width: 300px;
+    width: 20%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: aqua;
 }
 
 aside>ul {
     list-style: none;
+    margin-top: 2rem;
+    background-color: #6549D7;
+    width: 70%;
+    display: flex;
+    flex-direction: column;
+    height: 500px;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+aside>ul>h3 {
+    text-align: center;
+    margin-bottom: 1rem;
 }
 
 aside>ul>li {
-    margin-top: 1rem;
     cursor: pointer;
+    border: 2px solid white;
+    border-radius: 20%;
+    width: fit-content;
+    padding: 0.5rem;
 }
 
-aside>ul>li:last-child {
-    margin-bottom: 1rem;
+aside>ul>li:hover{
+    background-color: #846FD7;
+}
+
+aside>ul>li>span{
+    font-size: 1rem;
+    font-weight: 500;
 }
 
 aside>ul>li>span:last-child {
@@ -118,13 +142,14 @@ aside>ul>li>span:last-child {
 #carousel2 {
     margin-bottom: 2rem;
     margin-top: 2rem;
+    width: 70%;
 }
 
 /* section */
 
 section {
     float: left;
-    width: fit-content;
+    width: 80%;
 }
 
 .cards {
@@ -137,7 +162,7 @@ section {
     margin-top: 1rem; */
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: left;
     margin-top: 2rem;
     margin-right: 1rem;
     margin-left: 1rem;
@@ -147,20 +172,26 @@ section {
 #load {
     width: 200px;
     height: 200px;
-    position: fixed;
-    left: 50%;
+    position: relative;
+    margin-left: 500px;
+    margin-top: 20%
 }
 
 .card {
     display: flex;
     flex-direction: column;
-    border: 2px solid black;
+    border: 2px solid white;
     border-radius: 5px;
     margin-left: 1rem;
     margin-right: 1rem;
     margin-bottom: 1rem;
     width: 200px;
     height: 400px;
+    background-color: #6549D7;
+}
+
+.card:hover{
+    background-color: #846FD7
 }
 
 .card>img {
@@ -210,11 +241,28 @@ section {
     top: 0;
     right: 0;
     z-index: 10;
-    background-color: white;
+    background-color: #846FD7;
     clip-path: inset(0 0 0 100%);
     -webkit-clip-path: inset(0 0 0 100%);
     transition: ease-in-out 0.7s;
     overflow-y: scroll;
+}
+
+#boton{
+    background-color: #6549D7;
+    color: white;
+    cursor: pointer;
+    border-radius: 5px;
+    border: 1px solid;
+    width: 100px;
+    height: 30px;
+    font-size: 1rem;
+    font-weight: bold;
+}
+
+#boton:hover {
+    background-color: #1C0772;
+    color: white;
 }
 
 .carrito>p {
@@ -222,6 +270,7 @@ section {
     font-weight: bold;
     margin-top: 1rem;
     text-align: center;
+    color: white;
 }
 
 #close {
@@ -231,6 +280,7 @@ section {
     margin-left: 0.5rem;
     font-size: 2rem;
     cursor: pointer;
+    color: white;
 }
 
 .showCarrito {
@@ -253,8 +303,9 @@ section {
     width: 90%;
     margin-top: 0.5rem;
     margin-bottom: 0.5rem;
-    border: 2px solid black;
+    border: 2px solid white;
     border-radius: 5px;
+    background-color: #6549D7;
 }
 
 .cardCa>img {
@@ -295,7 +346,7 @@ section {
 .inferiorCa>span {
     margin-left: 1rem;
     cursor: pointer;
-    color: red;
+    color: white;
 }
 
 .inferiorCa>p:last-child {
@@ -318,6 +369,7 @@ section {
 .precio {
     margin-left: 1rem;
     display: flex;
+    color: white;
 }
 
 .precio>span {
@@ -326,4 +378,111 @@ section {
 
 .total>button {
     margin-right: 1rem;
+}
+
+/* footer */
+
+footer{
+    background-color: #6549D7;
+    padding-bottom: 0.1px;
+    width: 100%;
+}
+
+.footer-content{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-wrap: wrap;
+    padding-top: 60px;
+    padding-bottom: 40px;
+    margin-left: 2%;
+    margin-right: 2%;
+}
+
+.contact-us{
+    width: 40%;
+    color: #fff;
+}
+
+.brand{
+    font-weight: 500;
+    font-size: 40px;
+}
+
+.brand+p{
+    font-weight: 500;
+}
+
+.social-media{
+    width: 50%;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.social-media-icon{
+    display: inline-block;
+    margin-left: 20px;
+    width: 60px;
+    height: 60px;
+    border: 1px solid #fff;
+    border-radius: 50%;
+    text-align: center;
+    color: #fff;
+}
+
+.social-media-icon:hover{
+    background: #fff;
+    color: #764ba2;
+}
+
+.social-media-icon i{
+    font-size: 30px;
+    line-height: 60px;
+}
+
+.line{
+    width: 90%;
+    margin: 0 auto;
+    height: 2px;
+    background: #fff;
+    margin-bottom: 60px;
+}
+
+@media screen and (max-width:800px) {
+    
+    .footer-content{
+        justify-content: center;
+    }
+
+    .social-media{
+        width: 80%;
+        justify-content: space-evenly;
+    }
+
+    .social-media-icon{
+        margin-left: 0;
+    }
+
+    .social-media i{
+        margin-left: 0;
+    }
+
+    .contact-us{
+        text-align: center;
+        width: 80%;
+        margin-bottom: 40px;
+    }
+
+}
+
+@media screen and (max-width:500px){
+
+    .social-media{
+        width: 100%;
+    }
+
+    .contact-us{
+        width: 90%;
+    }
+
 }
