--- a/css/index.css
+++ b/css/index.css
@@ -20,13 +20,106 @@ body {
     background-color: #1C0772;
     display: flex;
     align-items: center;
+    justify-content: space-between;
 }
 
 .header>p {
+	margin-left: 7rem;
     font-size: 30px;
     color: white;
     font-weight: bold;
-    margin-left: 40px;
+}
+
+#logo {
+    width: 30px;
+    height: 30px;
+    margin-left: 0.5rem;
+}
+
+.usuario {
+    display: flex;
+    margin-right: 7rem;
+    align-items: center;
+}
+
+#imgUsuario {
+    height: 50px;
+    width: 50px;
+    border-radius: 100%;
+}
+
+#nombreUsuario {
+    margin-left: 0.8rem;
+    font-weight: bold;
+    color: white;
+}
+
+#arrow {
+    margin-left: 0.5rem;
+    color: white;
+    cursor: pointer;
+}
+
+
+
+.conf {
+    display: block;
+    background-color: #6549D7;
+    padding: 8px;
+    position: absolute;
+    right: 7rem;
+    margin-top: 3.5rem;
+    border: 2px solid white;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.conf:hover {
+    color:#6549D7;
+    border: 2px solid #6549D7;;
+}
+
+.m{
+    display: none;
+}
+
+.conf>ul{
+    display: flex;
+    flex-direction: column;
+    list-style: none;
+}
+
+.conf>ul>li{
+    text-decoration: none;
+}
+
+.conf>ul>li>a{
+    text-decoration: none;
+    cursor: pointer;
+    color: white;
+}
+
+.login {
+    margin-right: 7rem;
+}
+
+#linkLogin {
+    text-decoration: none;
+}
+
+#botonLogin {
+    background-color: #6549D7;
+    border: 2px solid white;
+    border-radius: 10px;
+    padding: 0.5rem;
+    color: white;
+    font-weight: bold;
+    cursor: pointer;
+    font-size: 1rem;
+}
+
+#botonLogin:hover {
+    background-color: #1C0772;
 }
 
 .menu {
@@ -81,6 +174,8 @@ body {
     object-fit: cover;
     position: absolute;
 }
+
+
 
 /* main */
 
@@ -145,6 +240,7 @@ aside>ul>li>span:last-child {
     width: 70%;
 }
 
+
 /* section */
 
 section {
@@ -169,12 +265,16 @@ section {
     margin-bottom: 1rem;
 }
 
+.loading {
+	display: flex;
+	justify-content: center;
+	width: 100%;
+}
+
 #load {
     width: 200px;
     height: 200px;
-    position: relative;
-    margin-left: 500px;
-    margin-top: 20%
+    margin-top: 10%
 }
 
 .card {
@@ -245,7 +345,8 @@ section {
     clip-path: inset(0 0 0 100%);
     -webkit-clip-path: inset(0 0 0 100%);
     transition: ease-in-out 0.7s;
-    overflow-y: scroll;
+    /* overflow-y: scroll; */
+    justify-content: space-between;
 }
 
 #boton{
@@ -292,9 +393,10 @@ section {
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: auto;
+    height: 80%;
     align-items: center;
-
+    justify-content: baseline;
+    overflow-y: scroll;
 }
 
 .cardCa {
@@ -448,6 +550,244 @@ footer{
     margin-bottom: 60px;
 }
 
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 100; /* Sit on top */
+  left: 0%;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%;/* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+  background-color: #846FD7;
+  margin: 15% auto;
+  border: 1px solid #888;
+  width: 30%; /* Could be more or less, depending on screen size */
+  color: White;
+}
+
+#h3{
+  padding: 10px;
+  text-align: center;
+}
+
+#pModal{
+  padding: 10px;
+  text-align: center;
+}
+
+#line {
+	width: 100%;
+}
+
+.login2 {
+	padding: 0 10px 10px 10px;
+	text-align: center;
+}
+
+#linkLogin2 {
+    text-decoration: none;
+}
+
+#botonLogin2 {
+    background-color: #6549D7;
+    border: 2px solid white;
+    border-radius: 10px;
+    padding: 0.5rem;
+    color: white;
+    font-weight: bold;
+    cursor: pointer;
+    font-size: 1rem;
+}
+
+#botonLogin2:hover {
+    background-color: #1C0772;
+}
+
+/* The Close Button */
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+  position: absolute;
+  margin-left: 1rem;
+  margin-top: 0.2rem;
+}
+
+.close:hover,
+.close:focus {
+  color: white;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.nav__label { 
+	display: none;
+    position: absolute;
+    left: 50px; 
+ }
+
+#checkbox {
+    display: none;
+    position: absolute;
+    left: 50px; 
+ }
+
+.dropbtn {
+    display: none;
+    background-color: #6549D7;
+    color: white;
+    padding: 16px;
+    border: none;
+    cursor: pointer;
+    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto Condensed', sans-serif;
+    font-size: 16px;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+  .dropdown-content {
+    position: absolute;
+    background-color: #6549D7;
+    min-width: 190px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    list-style: none;
+    background-color: #6549D7;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 0.5rem;
+    display: none;
+}
+
+.dropdown-content li {
+    color: white;
+    cursor: pointer;
+    border: 2px solid white;
+    border-radius: 10%;
+    margin:0.5rem;
+    width: fit-content;
+    align-items: center;
+    text-decoration: none;
+    display: flex;
+    padding: 0.5rem;
+    padding-inline: 1.5rem;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+
+}
+
+.dropdown-content li:hover {background-color: #846FD7}
+
+.dropdown:hover .dropdown-content {
+   display: flex;
+}
+
+.dropdown:hover .dropbtn {
+    background-color: #4b34a4;
+}
+
+.nav__foot {
+    display: none;
+    list-style: none;
+    align-items: center;
+    justify-content: center;
+    margin-top: 2rem;
+}
+.nav__foot>li {
+    text-decoration: none;
+    margin-left: 1rem;
+    margin-right: 1rem;
+}
+.nav__foot>li>a {
+    text-decoration: none;
+    color: white;
+}
+
+@media (max-width:1450px){
+    .topCarrus {
+        clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+        transition: 1s;
+    }
+    .aside {
+        clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+        transition: 1s;
+    }
+    .carrito {
+        width: 50vw;
+    }
+}
+@media (max-width:950px){
+    .aside {
+        clip-path: polygon(0 0, 0 0, 0 100%, 0 100%);
+        transition: 1s;
+    }
+    .dropbtn {
+        display: block;
+    }
+    .menu {
+        justify-content: space-around;
+    }
+    .carrito {
+        width: 55vw;
+    }
+    
+    .aside{
+		width: 0;
+	}
+    
+    section{
+		width: 100%;
+	}
+	
+    .cards{
+		justify-content: center;
+	}
+	
+	.carS{
+		position: initial;
+	}
+	
+	.header>p {
+		margin-left: 4rem;
+	}
+
+	.usuario {
+    	margin-right: 4rem;
+	}
+	
+	.login {
+		margin-right: 4rem;
+	}
+	
+	.conf {
+		right: 4rem;
+	}
+}
+@media (max-width:900px){
+.aside{
+    width: 0%;
+}
+.carrito {
+    width: 60vw;
+}
+}
+
 @media screen and (max-width:800px) {
     
     .footer-content{
@@ -456,7 +796,7 @@ footer{
 
     .social-media{
         width: 80%;
-        justify-content: space-evenly;
+        justify-content: space-around;
     }
 
     .social-media-icon{
@@ -472,11 +812,92 @@ footer{
         width: 80%;
         margin-bottom: 40px;
     }
+    
+    .aside{
+        width: 0%;
+    }
+    .carrito {
+        width: 70vw;
+    }
+
+}
+
+@media (max-width:670px){
+
+    .menu {
+        justify-content: space-evenly;
+    }
+    
+    .aside{
+        width: 0%;
+    }
+    .carrito {
+        width: 80vw;
+    }
+    .derecha>p {
+        font-size: 1.2rem;
+        font-weight: bold;
+        text-align: center;
+    }
+
+    .inferiorCa>p {
+        font-size: 1.2rem;
+        font-weight: bold;
+        margin-left: 1rem;
+    }
+    .inferiorCa>p:last-child {
+        font-size: 1.2rem;
+        margin-right: 1rem;
+    }
+	
+	.header>p {
+		margin-left: 2rem;
+	}
+
+	.usuario {
+    	margin-right: 2rem;
+	}
+	
+	.login {
+		margin-right: 2rem;
+	}
+	
+	.conf {
+		right: 2rem;
+	}
+}
+@media (max-width:580px){
+
+    .menu {
+        justify-content: space-around;
+    }
+    .carrito {
+        width: 90%;
+    }
+    .derecha>p {
+        font-size: 1.1rem;
+        font-weight: bold;
+        text-align: center;
+    }
+
+    .inferiorCa>p {
+        font-size: 1.1rem;
+        font-weight: bold;
+        margin-left: 1rem;
+    }
+    .inferiorCa>p:last-child {
+        font-size: 1.1rem;
+        margin-right: 1rem;
+    }
 
 }
 
 @media screen and (max-width:500px){
-
+	
+	.aside{
+        width: 0%;
+    }
+    
     .social-media{
         width: 100%;
     }
@@ -484,5 +905,108 @@ footer{
     .contact-us{
         width: 90%;
     }
+
+}
+
+@media (max-width:420px){
+    .topCarrus {
+        clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+        transition: 0.5s;
+    }
+
+    .menu {
+        justify-content: left;
+    }
+    .carrito {
+        width: 100%;
+    }
+    .derecha>p {
+        font-size: 1rem;
+        font-weight: bold;
+        text-align: center;
+    }
+
+    .inferiorCa>p {
+        font-size: 1rem;
+        font-weight: bold;
+        margin-left: 1rem;
+    }
+    .inferiorCa>p:last-child {
+        font-size: 1rem;
+        margin-right: 1rem;
+    }
+
+}
+@media (max-width:415px){
+    .topCarrus {
+        height: 0px;
+        -webkit-transition: height 1s linear;
+           -moz-transition: height 1s linear;
+            -ms-transition: height 1s linear;
+             -o-transition: height 1s linear;
+                transition: height 1s linear;
+    }
+.menu>ul {
+    display: none;
+}
+.dropbtn {
+    display: none;
+}
+.nav__label{
+    display: block;
+    cursor: pointer;
+}
+
+.dropdown-content  {
+    list-style: none;
+    margin-top: 2rem;
+    background-color: #6549D7;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 1.5rem;
+    clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+    transition: clip-path 0.5s;  
+}
+
+.dropdown-content li {
+    color: white;
+    cursor: pointer;
+    border: 2px solid white;
+    border-radius: 20%;
+    width: fit-content;
+    padding-inline: 3rem;
+    padding: 0.5rem;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+}
+
+#checkbox:checked + .dropdown .dropdown-content  {
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+    transition: clip-path 0.5s;
+}
+.nav__foot {
+display: flex;
+}
+.carrito {
+    width: 100%;
+}
+.derecha>p {
+    font-size: 1rem;
+    font-weight: bold;
+    text-align: center;
+}
+
+.inferiorCa>p {
+    font-size: 1rem;
+    font-weight: bold;
+    margin-left: 1rem;
+}
+.inferiorCa>p:last-child {
+    font-size: 1rem;
+    margin-right: 1rem;
+}
 
 }
